# mars_rover_ros2

./: CMD_VEL_FIX.md  ESP32_ARCHITECTURE.md  ESP32_TESTING_GUIDE.md  FOXGLOVE_INTEGRATION_SUMMARY.md  FOXGLOVE_QUICKSTART.md  HARDWARE_CONFIGURATION_CHANGES.md  HARDWARE_SETUP.md  JETSON_SETUP.md  NETWORK_ACCESS.md  README.md  RVIZ_WEB_GUIDE.md  TESTING_COMMANDS.md  WEB_GUI_SETUP.md  esp32_host_serial_can_bridge.ino  esp32_host_serial_can_bridge_with_motor.ino  esp32_motor_controller_template.ino  frames_2025-12-26_17.52.06.gv  frames_2025-12-26_18.11.24.gv  frames_2025-12-28_22.20.39.gv  frames_2025-12-28_22.39.00.gv  frames_2025-12-31_04.12.54.gv  frames_2025-12-31_04.15.41.gv  frames_2025-12-31_04.17.12.gv  frames_2026-01-03_00.53.34.gv  frames_2026-01-06_01.13.36.gv  frames_2026-01-18_02.11.50.gv  install_jetson_webgui.sh  setup.bash  setup.sh
aruco_sim_rover/: CMakeLists.txt  package.xml
aruco_sim_rover/launch/: arucoSpawner.launch.py  world.launch.py
aruco_sim_rover/worlds/: empty.sdf
models/cpr_agriculture/meshes/: agriculture_world.dae
my-app/: .env.production  QUICKSTART.md  components.json  next.config.mjs  package-lock.json  package.json
my-app/app/: globals.css  layout.tsx  page.tsx
my-app/app/api/launch/: route.ts
my-app/components/: aruco-launch-dialog.tsx  camera-stream.tsx  foxglove-panel.tsx  gps-map-client.tsx  gps-map.tsx  log-viewer.tsx  map-view.tsx  mission-control.tsx  multi-camera-view.tsx  process-card.tsx  ros-connection.tsx  ros-status-panel.tsx  ros-viewport.tsx  ros3d-viewer.tsx  rviz-vnc-viewer.tsx  teleop-control.tsx
my-app/hooks/: use-process-manager.ts
my-app/scripts/: setup-ros-environment.py
rover_description/: CMakeLists.txt  package.xml
rover_description/config/: rover_controllers.yaml
rover_description/launch/: rover.launch.py  rover_rviz.launch.py
rover_description/rviz/: rover.rviz
rover_description/urdf/: rover.gazebo  rover.urdf.xacro
src/: open_firewall_ports.sh  setup.sh  start-ros-bridge.sh  start_ros_bridge.sh  start_rviz_vnc.sh
src/gripper_hardware/: CMakeLists.txt  gripper_hardware.xml  package.xml
src/gripper_hardware/include/gripper_hardware/: gripper_hardware_interface.hpp
src/gripper_hardware/src/: gripper_hardware_interface.cpp
src/hardware_services/: CMakeLists.txt  package.xml
src/hardware_services/config/: compass_config.yaml  gps_config.yaml
src/rover_description/: CMakeLists.txt  FOXGLOVE_INTEGRATION.md  FOXGLOVE_QUICKSTART.md  package.xml
src/rover_description/config/: aruco_mission.rviz  camera_1.yaml  camera_2.yaml  camera_rgbd.yaml  controllers.yaml  coordi.txt  demo_waypoints.yaml  ekf.yaml  gps.yaml  nav2_gps_params.yaml  nav2_params.yaml  nav2_without_lidar.yaml  nav2_without_stvl_and_lidar.yaml  rover.lua  rover.rviz  sensors.yaml
src/rover_description/config/foxglove_layouts/: aruco_mission_layout.json  complete_system.json  complete_system_layout.json  gazebo_sim_layout.json  gps_navigation_layout.json
src/rover_description/launch/: aruco.launch.py  aruco_mission.launch.py  bottle.launch.py  bottle_mission.launch.py  cameras.launch.py  complete_foxglove.launch.py  complete_system.launch.py  controllers.launch.py  display.launch.py  dual_ekf_navsat.launch.py  foxglove.launch.py  foxglove_sim.launch.py  foxglove_viz.launch.py  gazebo_sim.launch.py  gnss.launch.py  gps_navigation.launch.py  gz_plus_control.launch.py  hardware.launch.py  mallet.launch.py  mallet_mission.launch.py  mapping.launch.py  navigation.launch.py  rockpick.launch.py  rockpick_mission.launch.py  rockpick_mission.py  spiral_search.launch.py  web_bridge.launch.py
src/rover_description/maps/: my_map.pgm  my_map.yaml
src/rover_description/models/cpr_agriculture/: model.sdf
src/rover_description/models/cpr_agriculture/meshes/: agriculture_world.dae
src/rover_description/od_models/: model_check.py  yolo_test.py
src/rover_description/rviz/: config.rviz
src/rover_description/scripts/: aruco_detection.py  aruco_detection1.py  aruco_detection2.py  bottle_detection.py  bottle_detection1.py  bottle_detection2.py  cmd_vel_relay.py  gnss_final.py  goal_to_pose.py  gps_waypoint_follower.py  mallet_detection.py  mallet_detection1.py  mallet_detection2.py  mission_initializer.py  requirements.txt  rockpick_detection.py  rockpick_detection1.py  rockpick_detection2.py  spiral_search.py  spiral_search_alone.py  spiral_search_od.py  teleop.py
src/rover_description/urdf/: aruco_marker.xacro  bottle.urdf  mallet.urdf  rockpick.urdf  rover.urdf
src/rover_description/worlds/: agriculture.world  empty.world
src/rover_hardware/: CMakeLists.txt  HARDWARE_PORTS.md  package.xml  rover_hardware.xml
src/rover_hardware/config/: controllers.yaml
src/rover_hardware/include/rover_hardware/: rover_can_interface.hpp
src/rover_hardware/launch/: bringup.launch.py
src/rover_hardware/scripts/: imu_publisher.py
src/rover_hardware/src/: rover_can_interface.cpp
src/worlds/: agriculture.world
(+10 files in other folders)
